--- a/Zombie Project/set_nutrition.html
+++ b/Zombie Project/set_nutrition.html
@@ -27,14 +27,14 @@
     <header>
         <h2>Zombie Prep</h2>
         <div class="row">
-        <nav class="navbar navbarnpm-inverse">
+        <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="/">Zombie Prep</a>
                   </div>
               <ul class="nav navbar-nav">
-                <li><a href="#">Goals</a></li>
-                <li><a href="#">Nutrition</a></li>
+                <li><a href="/goals.html">Goals</a></li>
+                <li><a href="/set_nutrition.html">Nutrition</a></li>
                 <li><a href="#">Contact Us</a></li>
               </ul>
             </div>
@@ -46,13 +46,7 @@
     <div class="container">
         <div class="goals col-sm-12 text-center">
             <div class="list_goals">
-                <ul>
-                    <li>History Goal 1</li>
-                    <li>History Goal 1</li>
-                    <li>History Goal 1</li>
-                    <li>History Goal 1</li>
-                    <li>History Goal 1</li>
-                </ul>
+               <p> Nutrition Page</p>
             </div>
         </div>
         
