--- a/Zombie Project/set_nutrition.html
+++ b/Zombie Project/set_nutrition.html
@@ -27,7 +27,7 @@
     <header>
         <h2>Zombie Prep</h2>
         <div class="row">
-        <nav class="navbar navbarnpm-inverse">
+        <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="/">Zombie Prep</a>
